# rust-raytracer-weekend

./: Cargo.toml  LICENSE  README.md  main.js  package.json
cli/: Cargo.toml  callgrind.out.64876  perf.data
cli/src/: main.rs
lib/: .gitignore  Cargo.toml  README.md
lib/src/: camera.rs  hit.rs  lib.rs  material.rs  random.rs  ray.rs  scenes.rs  vec.rs  write.rs
lib/src/material/: dielectric.rs  lambertian.rs  metal.rs
lib/src/objects/: sphere.rs
lib/src/scenes/: glass_sphere_scene.rs  random_scene.rs  ten_spheres.rs  three_sphere_scene.rs
lib/src/write/: png.rs  ppm.rs
renders/: create-montage.sh
src/: camera.rs  main.rs  material.rs  scenes.rs  vec.rs  write.rs
src/material/: dielectric.rs
src/objects/: sphere.rs
src/scenes/: random_scene.rs  ten_spheres.rs
src/write/: png.rs  ppm.rs
wasm/: .gitignore  Cargo.toml  LICENSE_MIT  build.sh  caniuse-module-worker.js  index.html  package-lock.json  package.json  rtw-render.js  rtw-renderer.js  rtw-timer.js  serve.sh  wasm-app.js  wasm-node.js  wasm-render.js  wasm-worker.js  watch.sh
wasm/src/: lib.rs
