[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"       # for numeric generics
pbr = "1.0.4"     # progress bar during render
rtw = { path = "../lib", version = "0.1.0" }
