[package]
name = "rtw-lib"
version = "0.1.0"
authors = ["mwcz <mwc@clayto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"       # for numeric generics
lazy_static = "1.4.0"
image = "0.23.14" # for writing the output image
spin-sync = "0.3.2"
