[package]
name = "wasm"
version = "0.1.0"
authors = ["mwcz <mwc@clayto.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.51"
rtw = { path = "../lib", version = "0.1.0" }
console_error_panic_hook = { version = "0.1.6", optional = true }
num = "0.3"       # for numeric generics

# wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# opt-level = 3

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
